# video-downloader-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package-lock.json  package.json  rust-analyzer.toml  tailwind.config.js
assets/: output.css  tailwind.css
assets/styling/: navbar.css
resources/: README.md
src/: common.rs  main.rs
src/components/: download_progress.rs  mod.rs  navbar.rs
src/database/: mod.rs  models.rs  schema.rs  web_models.rs
src/server/: download.rs  mod.rs  youtube.rs
src/server/download/: handlers.rs  mod.rs  services.rs  storage.rs  types.rs  utils.rs  web_services.rs  ytdlp.rs
src/server/download/handlers/: database.rs  echo.rs  info.rs  mod.rs  progress.rs  search.rs  video.rs
src/views/: blog.rs  download.rs  downloads.rs  getinfo.rs  home.rs  mod.rs  search.rs
src/views/download/: handlers.rs  mod.rs  types.rs  ui.rs
