[package]
name = "text_dioxus2"
version = "0.1.0"
authors = ["anilpdv <pdvanil007@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
rusty_ytdl = { git = "https://github.com/Mithronn/rusty_ytdl", optional = true, features = [
    "ffmpeg",
] }
base64 = "0.21.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusty_ytdl"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
