[package]
name = "text_dioxus2"
version = "0.1.0"
authors = ["anilpdv <pdvanil007@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
youtube_dl = { version = "0.10.0", features = [
    "downloader-rustls-tls",
], optional = true }
base64 = "0.21.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"], optional = true }
tracing = "0.1"
futures = "0.3"
futures-timer = "3.0.2"

js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
gloo-utils = { version = "0.2", optional = true }
web-sys = { version = "0.3.64", features = [
    "Window",
    "Location",
    "Storage",
    "Performance",
    "PerformanceTiming",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "HtmlAnchorElement",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
], optional = true }
dirs = "5.0.1"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "sqlite",
], optional = true }
time = { version = "0.3", features = [
    "formatting",
    "serde",
    "parsing",
], optional = true }
url = "2.4.1"

open = { version = "4.2.0", optional = true }
chrono = "0.4.26"
dioxus-free-icons = { version = "0.9", features = [
    "font-awesome-solid",
    "font-awesome-regular",
    "font-awesome-brands",
    "hero-icons-outline",
    "hero-icons-solid",
    "bootstrap",
    "feather",
] }
rusty_ytdl = { version = "0.7.4", optional = true }


[features]
default = ["server"]
web = [
    "dioxus/web",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:gloo-timers",
    "dep:gloo-utils",
]
desktop = ["dioxus/desktop", "server"]
mobile = ["dioxus/mobile", "server"]
server = [
    "dioxus/server",
    "dep:youtube_dl",
    "dep:tokio",
    "dep:sqlx",
    "dep:time",
    "dep:open",
    "dep:rusty_ytdl",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
